fix: tweak styling for table overflows (#200)

--- a/apps/backoffice/src/app/styles/custom-element.styles.scss
+++ b/apps/backoffice/src/app/styles/custom-element.styles.scss
@@ -343,8 +343,12 @@ mat-panel-title {
     align-items: center;
 }
 
+[role='table'] {
+    overflow: auto;
+}
+
 [table-head] {
-    @apply flex items-center bg-gray-300 border-b border-black divide-x divide-gray-400 font-medium;
+    @apply sticky top-0 z-50 flex items-center bg-gray-300 border-b border-black divide-x divide-gray-400 font-medium;
 
     > div {
         @apply flex items-center;
